adding home screen

--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -6,6 +6,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(36, 36, 36) ;
+  color: #ffffff;
+}
+html *
+{
+  font-family: "Futura" !important;
 }
 
 code {
