--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -6,11 +6,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(36, 36, 36) ;
+  background-color: rgb(59, 59, 59) ;
 }
 html *
 {
-  font-family: "Futura" !important;
+  font-family: "Futura", Helvetica, Arial, sans-serif;
 }
 
 code {
